--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="/css/style.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>My shop</h1>
+		{{{body}}}
 	</body>
 </html>
